force-app/main/default/objects/Event_Billable__c/Event_Billable__c.object-meta.xml
<CustomObject>
    <label>Event Billable</label>
    <nameField>
        <displayFormat>EB-{0000}</displayFormat>
        <label>Event Billable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Billables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>