force-app/main/default/objects/Event_Billable__c/fields/Billable_Link__c.field-meta.xml
<CustomField>
    <fullName>Billable_Link__c</fullName>
    <label>Billable Link</label>
    <type>Url</type>
</CustomField>