force-app/main/default/objects/Event_Billable__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing</label>
    <referenceTo>Billing__c</referenceTo>
    <relationshipLabel>Event Billables</relationshipLabel>
    <relationshipName>Event_Billables</relationshipName>
    <type>Lookup</type>
</CustomField>