force-app/main/default/objects/Event_Billable__c/fields/Event_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Link__c</fullName>
    <label>Event Link</label>
    <type>Url</type>
</CustomField>