force-app/main/default/objects/Event_Billable__c/fields/Event_Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Event_Wrapper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event_Wrapper__c</referenceTo>
    <relationshipLabel>Event Billables</relationshipLabel>
    <relationshipName>Event_Billables</relationshipName>
    <type>Lookup</type>
</CustomField>